Code analytics improvements