@@ -14,7 +14,7 @@ public class Converter {
                 .map(line -> Arrays.stream(line.split(delimiter)).toList())
                 .toList();
 
-        String[][] matrix = new String[inputMatrix.size()][inputMatrix.get(0).size()];
+        String[][] matrix = new String[inputMatrix.size()][inputMatrix.getFirst().size()];
 
         for (int row = 0; row < inputMatrix.size(); row++) {
             for (int column = 0; column < inputMatrix.get(row).size(); column++) {
